Fixed auto-complete overflow

--- a/app/assets/stylesheets/theme/index.css.scss
+++ b/app/assets/stylesheets/theme/index.css.scss
@@ -97,3 +97,8 @@ table.table > tbody > tr > td {
 .typeahead-wrap {
   color: #000;
 }
+
+
+div.liquid-container {
+  overflow: visible;
+}
